--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -113,7 +113,7 @@
             <li><a href="">Another nav item</a></li>
           </ul>
         </div>
-        <div class="col-sm-9 col-md-10 col-md-offset-2 main">
+        <div class="col-sm-9 col-md-10 main">
           <h1 class="page-header">Dashboard</h1>
 
           <div class="row placeholders">
