--- a/app/assets/stylesheets/carousel.css
+++ b/app/assets/stylesheets/carousel.css
@@ -39,7 +39,7 @@ body {
 
 /* Carousel base class */
 .carousel {
-  height: 500px;
+  height:50vw;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
@@ -48,7 +48,7 @@ body {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px;
+  height: 50vw;
   background-color: #777;
 }
 .carousel-inner > .item > img {
@@ -56,9 +56,8 @@ body {
   top: 0;
   left: 0;
   min-width: 100%;
-  height: 500px;
+  height: 50vw;
 }
-
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
