update some pics and contents

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,13 +28,13 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="#">注册 | 登录</a></li>
+            <li><a href="#">购物车</a></li>
+            <li><a href="#">我的收藏</a></li>
+            <li><a href="#">物流追踪</a></li>
           </ul>
           <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
+            <input type="text" class="form-control" placeholder="搜索您想要的宝贝...">
           </form>
         </div>
       </div>
@@ -48,10 +48,11 @@
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="/images/image1.png" alt="First slide">
+          <img class="first-slide" src="/images/image1.jpeg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>物通天下</h1>
@@ -60,7 +61,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="/images/image2.png" alt="Second slide">
+          <img class="second-slide" src="/images/image2.jpeg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <p>最完美供应链模式电商平台 </p>
@@ -70,7 +71,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="/images/image3.png" alt="Third slide">
+          <img class="third-slide" src="/images/image3.jpeg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <!-- <h1>One more for good measure.</h1> -->
@@ -79,6 +80,14 @@
               <p>团购促销为主</p>
               <p>多级分销互动</p>
               <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p> -->
+            </div>
+          </div>
+        </div>
+        <div class="item">
+          <img class="third-slide" src="/images/ee_demo1.jpeg" alt="Fourth slide">
+          <div class="container">
+            <div class="carousel-caption">
+              
             </div>
           </div>
         </div>
@@ -97,47 +106,47 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Analytics</a></li>
-            <li><a href="#">Export</a></li>
+            <li class="active"><a href="#">物美价廉<span class="sr-only">(current)</span></a></li>
+            <li><a href="#">流行女装</a></li>
+            <li><a href="#">时尚男装</a></li>
+            <li><a href="#">今天特惠</a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li><a href="">Nav item</a></li>
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
-            <li><a href="">More navigation</a></li>
+            <li><a href="">数位周边</a></li>
+            <li><a href="">居家生活</a></li>
+            <li><a href="">鞋类箱包</a></li>
+            <li><a href="">手表配饰</a></li>
+            <li><a href="">流行数码</a></li>
           </ul>
           <ul class="nav nav-sidebar">
-            <li><a href="">Nav item again</a></li>
-            <li><a href="">One more nav</a></li>
-            <li><a href="">Another nav item</a></li>
+            <li><a href="">电子商城</a></li>
+            <li><a href="">妇幼玩具</a></li>
+            <li><a href="">户外运动</a></li>
           </ul>
         </div>
         <div class="col-sm-9 col-md-10 main">
-          <h1 class="page-header">Dashboard</h1>
+          <h1 class="page-header">Best Sellers</h1>
 
           <div class="row placeholders">
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
+              <img src="/images/best_seller1.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+              <h4>运动装备</h4>
+              <span class="text-muted">运动装备大搜罗</span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
+              <img src="/images/best_seller2.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+              <h4>家具生活</h4>
+              <span class="text-muted">最爱Zakaa风</span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
+              <img src="/images/best_seller3.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+              <h4>最爱Armani</h4>
+              <span class="text-muted">男士必备</span>
             </div>
             <div class="col-xs-6 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
-              <h4>Label</h4>
-              <span class="text-muted">Something else</span>
+              <img src="/images/best_seller4.jpg" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+              <h4>数码生活</h4>
+              <span class="text-muted">摄影无处不在</span>
             </div>
           </div>
 
