--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -84,7 +84,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="/images/ee_demo1.jpeg" alt="Fourth slide">
+          <img class="third-slide" src="/images/image4.jpeg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               
