--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,68 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+<div class="container"> 
+  <div id="signupbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <div class="panel-title">注册</div>
+        <div style="float:right; font-size: 85%; position: relative; top:-10px">
+          <a href="/users/sign_in">登录</a>
+        </div>
+      </div>  
+      <div class="panel-body" >
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+       <!--  <form id="signupform" class="form-horizontal" role="form"> -->
+          <div id="signupalert" style="display:none" class="alert alert-danger">
+            <%= devise_error_messages! %>
+            <span></span>
+          </div> 
+          <div class="form-group">
+            <label for="email" class="col-md-3 control-label">邮箱</label>
+            <div class="col-md-9">
+              <%= f.email_field :email, autofocus: true, class: 'form-control', placeholder: "电子邮箱地址" %>
+            </div>
+          </div>
+          <div class="form-group">
+              <label for="fullname" class="col-md-3 control-label">姓名</label>
+              <div class="col-md-9">
+                  <input type="text" class="form-control" name="fullname" placeholder="姓名">
+              </div>
+          </div>
+          <div class="form-group">
+              <label for="password" class="col-md-3 control-label">密码</label>
+              <% if @minimum_password_length %>
+              <em>(至少 <%= @minimum_password_length %> 位数字或字母)</em>
+              <% end %><br />
+              <div class="col-md-9">
+                <%= f.password_field :password, autocomplete: "off", class: 'form-control', placeholder: "密码" %>
+              </div>
+          </div>
+              
+          <div class="form-group">
+            <label for="Password confirmation" class="col-md-3 control-label">密码确认</label>
+            <div class="col-md-9">
+              <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control', placeholder: "再次输入密码" %>
+            </div>
+          </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+          <div class="form-group">
+              <!-- Button -->                                        
+            <div class="col-md-offset-3 col-md-9">
+              <%= f.submit "注册", class: 'btn btn-info' %>
+              <span style="margin-left:8px;">或者</span>  
+            </div>
+          </div>
+              
+          <div style="border-top: 1px solid #999; padding-top:20px"  class="form-group">
+            <div class="col-md-offset-3 col-md-9">
+              <button id="btn-fbsignup" type="button" class="btn btn-primary"><i class="icon-facebook"></i> 用Facebook注册</button>
+            </div>                                           
+                  
+          </div>
+        <% end %>
+        <!-- </form> -->
+      </div>
+    </div>
+  </div> 
+</div>
+    
