--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
         </div>
       </div>  
       <div class="panel-body" >
-        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'form-horizontal' }) do |f| %>
        <!--  <form id="signupform" class="form-horizontal" role="form"> -->
           <div id="signupalert" style="display:none" class="alert alert-danger">
             <%= devise_error_messages! %>
