--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,6 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
-
     <title>EESTORES</title>
 
   </head>
@@ -56,7 +55,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="/images/image1.jpeg" alt="First slide">
+          <img class="first-slide" src="/images/IMG_3547.JPG" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>物通天下</h1>
@@ -65,7 +64,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="/images/image2.jpeg" alt="Second slide">
+          <img class="second-slide" src="/images/IMG_3548.JPG" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <p>最完美供应链模式电商平台 </p>
@@ -75,7 +74,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="/images/image3.jpeg" alt="Third slide">
+          <img class="third-slide" src="/images/IMG_3549.JPG" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <!-- <h1>One more for good measure.</h1> -->
@@ -88,7 +87,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="/images/image4.jpeg" alt="Fourth slide">
+          <img class="third-slide" src="/images/IMG_3550.JPG" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               
