--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -55,7 +55,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="/images/IMG_3547.JPG" alt="First slide">
+          <img class="first-slide" src="/images/1.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>物通天下</h1>
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="/images/IMG_3548.JPG" alt="Second slide">
+          <img class="second-slide" src="/images/2.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <p>最完美供应链模式电商平台 </p>
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="/images/IMG_3549.JPG" alt="Third slide">
+          <img class="third-slide" src="/images/3.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <!-- <h1>One more for good measure.</h1> -->
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="/images/IMG_3550.JPG" alt="Fourth slide">
+          <img class="third-slide" src="/images/4.jpg" alt="Fourth slide">
           <div class="container">
             <div class="carousel-caption">
               
