--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -5,3 +5,27 @@
 .cursor-pointer{
   cursor: pointer;
 }
+
+.mt-1{
+  margin-top: 10px;
+}
+
+.form-control.form-field-has-error{
+  border-color: #a94442;
+}
+
+.spinner{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  top: 0;
+  opacity: .5;
+  z-index: 999999;
+  background: #e8e8e8;
+}
+
+.block-center{
+  margin: 0 auto;
+}
