--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,7 +7,9 @@
     <%= react_component("ProductContainer", { 
       product: @product,
       images: @product.product_images.map(&:avatar),
-      info: @product.product_info
+      info: @product.product_info,
+      currentUserId: current_user.id,
+      category: {middle: @product.category_bottom.category_middle, bottom: @product.category_bottom}
     }) %>
   </body>
   
