--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,8 +10,20 @@
   margin-top: 10px;
 }
 
+.mb-1{
+  margin-bottom: 10px;
+}
+
+.mb-2{
+  margin-bottom: 20px;
+}
+
 .form-control.form-field-has-error{
   border-color: #a94442;
+}
+
+.full-width{
+  width: 100%;
 }
 
 .spinner{
@@ -32,6 +44,10 @@
 
 .img-circle {
   border-radius: 50%;
+}
+
+.font21 {
+  font-size: 21px;
 }
 
 @media (max-width: 992px){
@@ -60,4 +76,10 @@
     height: 200px;
     width: 200px;
   }
+}
+
+.image_middle{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
